# computer-graphics-algorithms

./: .gitignore  CMakeLists.txt  Makefile  glad.c
lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt
lab8/data/: fragment_shader.glsl  vertex_shader.glsl
lab8/lib/utils/: CMakeLists.txt
lab8/lib/utils/include/: utils.hpp
lab8/lib/utils/src/: utils.cpp
lab8/src/: main.cpp
